testdata/baselines/reference/tests_cases_compiler_genericTypeAssertions4.ts.ast
SourceFile
  ClassDeclaration
    Identifier: ' A'
    MethodDeclaration
      Identifier: '
    foo'
      Block
        ReturnStatement
          StringLiteral
  ClassDeclaration
    Identifier: ' B'
    HeritageClause
      ExpressionWithTypeArguments
        Identifier: ' A'
    MethodDeclaration
      Identifier: '
    bar'
      Block
        ReturnStatement
          NumericLiteral
  ClassDeclaration
    Identifier: ' C'
    HeritageClause
      ExpressionWithTypeArguments
        Identifier: ' A'
    MethodDeclaration
      Identifier: '
    baz'
      Block
        ReturnStatement
          NumericLiteral
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' a'
        TypeReference
          Identifier: ' A'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' b'
        TypeReference
          Identifier: ' B'
  VariableStatement
    VariableDeclarationList
      VariableDeclaration
        Identifier: ' c'
        TypeReference
          Identifier: ' C'
  FunctionDeclaration
    Identifier: ' foo2'
    TypeParameter
      Identifier: 'T'
      TypeReference
        Identifier: ' A'
    Parameter
      Identifier: 'x'
      TypeReference
        Identifier: ' T'
    Block
      VariableStatement
        VariableDeclarationList
          VariableDeclaration
            Identifier: ' y'
            Identifier: ' x'
      ExpressionStatement
        BinaryExpression
          Identifier: '
    y'
          EqualsToken
          Identifier: ' a'
      ExpressionStatement
        BinaryExpression
          Identifier: ' // error: cannot convert A to T
    y'
          EqualsToken
          Identifier: ' b'
      ExpressionStatement
        BinaryExpression
          Identifier: ' // error: cannot convert B to T
    y'
          EqualsToken
          Identifier: ' c'
      ExpressionStatement
        BinaryExpression
          Identifier: ' // error: cannot convert C to T
    y'
          EqualsToken
          TypeAssertionExpression
            TypeReference
              Identifier: 'T'
            Identifier: 'a'
      ExpressionStatement
        BinaryExpression
          Identifier: '
    y'
          EqualsToken
          TypeAssertionExpression
            TypeReference
              Identifier: 'T'
            Identifier: 'b'
      ExpressionStatement
        BinaryExpression
          Identifier: ' // error: cannot convert B to T
    y'
          EqualsToken
          TypeAssertionExpression
            TypeReference
              Identifier: 'T'
            Identifier: 'c'
